todo-app/manifests/todo-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: todo-app
          image: k13lucien/todo-app
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/cache
