todo-app/manifests/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.0.0
          args: ["-config.file=/etc/loki/loki.yaml"]
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: project
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
