todo-app/manifests/todo-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
