todo-app/manifests/todo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: todo-app
          image: k13lucien/todo-app
          volumeMounts:
            - name: image-cache
              mountPath: /usr/src/app/cache
---

apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
